indicators are in

--- a/less/mainboard.less
+++ b/less/mainboard.less
@@ -30,15 +30,17 @@
 	margin: 0;
 }
 
-.selected {
-
+.indicator {
+	margin: 10%;
+	height: 80%;
+	width: 80%;
 }
 
 .p1 {
-	
+	background: orangered;
 }
 
 .p2 {
-
+	background: cornflowerblue;
 }
 
